Target JDK 15 by default.