@@ -3,7 +3,6 @@ plugins {
   id 'maven-publish'
   id "com.jfrog.bintray"
   id "pl.allegro.tech.build.axion-release"
-  id "org.javamodularity.moduleplugin"
   id "me.champeau.gradle.jmh"
   id "io.morethan.jmhreport"
 }
@@ -25,37 +24,11 @@ ext {
   bench = project.properties['bench'] ?: 'BenchCharFieldStyles'
 }
 
-sourceCompatibility = JavaVersion.toVersion(project.findProperty('targetJava') ?: JavaVersion.VERSION_15)
-
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(15)
+    languageVersion = JavaLanguageVersion.of(project.findProperty('targetJava') as Integer ?: 15)
   }
 }
-
-// https://docs.gradle.org/5.6.2/userguide/building_java_projects.html#sec:java_cross_compilation
-//def javaHomePath = new File("${project.findProperty('javaHome') ?: System.getenv('JAVA_HOME')}")
-//def javaExecutables = [:].withDefault { execName ->
-//  def executable = new File(javaHomePath, "bin/${execName}")
-//  assert executable.exists(): "There is no ${execName} executable in ${javaHomePath}/bin"
-//  executable
-//}
-//
-//tasks.withType(AbstractCompile) {
-//  options.with {
-//    fork = true
-//    forkOptions.javaHome = javaHomePath
-//  }
-//}
-//tasks.withType(Javadoc) {
-//  executable = javaExecutables.javadoc
-//}
-//tasks.withType(Test) {
-//  executable = javaExecutables.java
-//}
-//tasks.withType(JavaExec) {
-//  executable = javaExecutables.java
-//}
 
 //github {
 //  slug = 'comodal/json-iterator'
@@ -82,32 +55,30 @@ dependencies {
   jmh 'org.openjdk.jmh:jmh-generator-annprocess:+'
 }
 
-//jmh {
-//  // ./gradlew -q --console=plain --no-daemon jmh -Pbench=BenchStringFieldStyles
-//  jvm = javaHomePath // Custom JVM to use when forking.
-//  jvmArgsPrepend = ['-XX:+AlwaysPreTouch', '-XX:-UseBiasedLocking', '-XX:+DisableExplicitGC', '-XX:+UseNUMA', '-XX:+UnlockExperimentalVMOptions', '-XX:+UseZGC']
-//  resultsFile = project.parent.file("benchmark-results/$bench/jmh_report/results.json")
-//  warmupIterations = 3
-//  warmup = '4s'
-//  iterations = 5
-//  timeOnIteration = '5s'
-//  fork = 1
-//  include = [project.bench]
-//  jmhVersion = '+'
-//  resultFormat = 'JSON'
-//  includeTests = false
-//}
-//
-//jmhReport {
-//  jmhResultPath = jmh.resultsFile
-//  def reportDir = project.parent.file("benchmark-results/$bench/jmh_report/")
-//  jmhReportOutput = reportDir
-//  if (!reportDir.exists()) {
-//    reportDir.mkdirs()
-//  }
-//}
-//
-//tasks.jmh.finalizedBy tasks.jmhReport
+jmh {
+  // ./gradlew -q --console=plain --no-daemon jmh -Pbench=BenchStringFieldStyles
+  resultsFile = project.parent.file("benchmark-results/$bench/jmh_report/results.json")
+  warmupIterations = 3
+  warmup = '4s'
+  iterations = 5
+  timeOnIteration = '5s'
+  fork = 1
+  include = [project.bench]
+  jmhVersion = '+'
+  resultFormat = 'JSON'
+  includeTests = false
+}
+
+jmhReport {
+  jmhResultPath = jmh.resultsFile
+  def reportDir = project.parent.file("benchmark-results/$bench/jmh_report/")
+  jmhReportOutput = reportDir
+  if (!reportDir.exists()) {
+    reportDir.mkdirs()
+  }
+}
+
+tasks.jmh.finalizedBy tasks.jmhReport
 
 sourceSets {
   test {
@@ -120,18 +91,7 @@ sourceSets {
   }
 }
 
-compileTestJava {
-  moduleOptions {
-    addModules = ['org.junit.jupiter.params', 'jmh.core']
-    addReads = [
-        'systems.comodal.json_iterator': 'org.junit.jupiter.params,jmh.core']
-  }
-}
-
 test {
-  moduleOptions {
-    runOnClasspath = true
-  }
   useJUnitPlatform()
   maxParallelForks = 4
   testLogging {
